--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ notifications:
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
   - julia -e 'Pkg.add("Images"); Pkg.checkout("Images", "teh/colors")'
-  - julia -e 'Pkg.add("Gadfly"); Pkg.checkout("Gadfly", "teh/colors2"')
+  - julia -e 'Pkg.add("Gadfly"); Pkg.checkout("Gadfly", "teh/colors2")'
   - julia -e 'Pkg.checkout("DataArrays")
   - julia -e 'Pkg.checkout("Hexagons")
   - julia -e 'Pkg.checkout("Compose", "teh/colors2")'
