--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ script:
   - julia -e 'Pkg.checkout("DataArrays")'
   - julia -e 'Pkg.checkout("Hexagons")'
   - julia -e 'Pkg.checkout("Compose", "teh/colors2")'
-  - julia -e 'Pkg.checkout("Cairo", "teh/colors2")'
-  - julia -e 'Pkg.checkout("Graphics", "teh/colors")'
+  - julia -e 'Pkg.add("Cairo"); Pkg.checkout("Cairo", "teh/colors2")'
+  - julia -e 'Pkg.add("Graphics"); Pkg.checkout("Graphics", "teh/colors")'
   - julia -e 'Pkg.add("Winston"); Pkg.checkout("Winston", "teh/colors")'
   - julia -e 'Pkg.add("ProfileView"); Pkg.checkout("ProfileView", "teh/colors")'
   - julia -e 'Pkg.test("Images")'
