Use xvfb-run only once
This may fix a mysterious error?

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,5 +27,4 @@ script:
   - julia -e 'Pkg.test("Graphics")'
   - julia -e 'Pkg.test("Compose")'
   - julia -e 'Pkg.test("Gadfly")'
-  - xvfb-run julia -e 'Pkg.test("Winston")'
-  - xvfb-run julia -e 'Pkg.test("ProfileView")'
+  - xvfb-run julia -e 'Pkg.test("Winston"); Pkg.test("ProfileView")'
